--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,27 @@
         <activity android:name=".MainMenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SecondAct"
+            android:label="@string/title_activity_second"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".PDFActivity_"
+            android:label="@string/title_activity_pdf"
+            android:screenOrientation="landscape">
+        </activity>
+
+        <!--<activity-->
+            <!--android:name="PDFViewActivity_"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:screenOrientation="landscape" >-->
+        <!--</activity>-->
+
+
+
     </application>
 
 </manifest>
