--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
 }
 
 dependencies {
+    compile 'com.google.firebase:firebase-storage:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
     compile project(':android-pdf-viewer')
     provided 'org.androidannotations:androidannotations:4.0.0'
     compile 'org.androidannotations:androidannotations-api:4.0.0'
@@ -34,3 +38,8 @@ dependencies {
     })
     compile 'org.jetbrains:annotations-java5:15.0'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
