--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,11 +30,14 @@
             android:label="@string/title_activity_pdf"
             android:screenOrientation="landscape">
         </activity>
-
-        <!--<activity-->
-            <!--android:name="PDFViewActivity_"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:screenOrientation="landscape" >-->
-        <!--</activity>-->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
     </application>
 </manifest>
